add: シーザー暗号

--- a/01_古典暗号.ipynb
+++ b/01_古典暗号.ipynb
@@ -52,6 +52,171 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## シーザー暗号\n",
+    "\n",
+    "- 暗号化アルゴリズム:\n",
+    "    - 平文のアルファベットをそれぞれ3文字ずらす（アルファベットの最後の3文字は先頭に循環させる）\n",
+    "        1. KeyGen（鍵生成アルゴリズム）\n",
+    "            - `KeyGen(起動) -> n = 3（固定）`\n",
+    "        2. Enc（暗号化アルゴリズム）\n",
+    "            - `Enc(平文, 鍵) -> 各文字を右に(鍵)文字ずらした暗号文を生成`\n",
+    "        3. Dec（復号アルゴリズム）\n",
+    "            - `Dec(暗号文, 鍵) -> 各文字を左に(鍵)文字ずらした平文を生成`\n",
+    "\n",
+    "#### シーザー暗号対応表\n",
+    " a | b | c | d | e | f | g | h | i | j | k | l | m | n | o | p | q | r | s | t | u | v | w | x | y | z\n",
+    ":--|:--|:--|:--|:--|:--|:--|:--|:--|:--|:--|:--|:--|:--|:--|:--|:--|:--|:--|:--|:--|:--|:--|:--|:--|:--|\n",
+    " d | e | f | g | h | i | j | k | l | m | n | o | p | q | r | s | t | u | v | w | x | y | z | a | b | c\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: replacing module Caesar.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Main.Caesar"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# シーザー暗号\n",
+    "module Caesar\n",
+    "    ## 鍵生成: n = 3\n",
+    "    KeyGen() = (n = 3)\n",
+    "\n",
+    "    ## 暗号化: 暗号文[i] = (平文[i] + n) % 26\n",
+    "    ### アルファベットの列を循環させるために、文字符号をn文字右にずらしたあと 26 で割った余りを求める\n",
+    "    Enc(text::AbstractString, n::Int) = [c = Char((Int(c) + n) % 26) for c in text]\n",
+    "\n",
+    "    ## 復号: 平文[i] = (暗号文[i] + 26 - n) % 26\n",
+    "    ### アルファベットの列を循環させるために、文字符号をn文字左にずらしたあと 26 で割った余りを求める\n",
+    "    Dec(text::AbstractString, n::Int) = [c = Char((Int(c) + 26 - n) % 26) for c in text]\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Array{Char,1}:\n",
+       " '\\x03'\n",
+       " '\\x04'\n",
+       " '\\x05'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# シーザー暗号: 動作確認\n",
+    "Caesar.Enc(\"\\0\\1\\2\", Caesar.KeyGen())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "decode (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 今のままではアルファベットをそのまま使えないため、符号化を行うアルゴリズムを定義する\n",
+    "\n",
+    "## アルファベット[\"a\", \"b\", ...\"z\"] -> 符号[0, 1, ..., 26]\n",
+    "### アスキーコード表より 'a' = 97, ...'z' = 122\n",
+    "### -> ret[i] = text[i] - 97\n",
+    "encode(text::AbstractString)::Array{Char,1} = [Char(Int(c) - 97) for c in text]\n",
+    "\n",
+    "## 符号[0, 1, ..., 26] -> アルファベット[\"a\", \"b\", ..., \"z\"]\n",
+    "### ret[i] = signs[i] + 97\n",
+    "decode(signs::Array{Char,1})::AbstractString = String([Char(Int(c) + 97) for c in signs])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10-element Array{Char,1}:\n",
+       " '\\a'  \n",
+       " '\\x04'\n",
+       " '\\v'  \n",
+       " '\\v'  \n",
+       " '\\x0e'\n",
+       " '\\x16'\n",
+       " '\\x0e'\n",
+       " '\\x11'\n",
+       " '\\v'  \n",
+       " '\\x03'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 動作確認\n",
+    "encode(\"helloworld\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"qia\""
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "decode(['\\20', '\\10', '\\0'])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
