fix: シーザー暗号

--- a/01_古典暗号.ipynb
+++ b/01_古典暗号.ipynb
@@ -75,23 +75,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: replacing module Caesar.\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "Main.Caesar"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +119,7 @@
        " '\\x05'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +140,7 @@
        "decode (generic function with 1 method)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +179,7 @@
        " '\\x03'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -207,13 +200,77 @@
        "\"qia\""
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "decode(['\\20', '\\10', '\\0'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: replacing module Caesar.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Main.Caesar"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 符号化を含めてシーザー暗号を実装\n",
+    "module Caesar\n",
+    "    import ..encode, ..decode\n",
+    "\n",
+    "    ## 鍵生成: n = 3\n",
+    "    KeyGen() = (n = 3)\n",
+    "\n",
+    "    ## 暗号化: 暗号文[i] = (平文[i] + n) % 26\n",
+    "    ### アルファベットの列を循環させるために、文字符号をn文字右にずらしたあと 26 で割った余りを求める\n",
+    "    Enc(text::AbstractString, n::Int)::Array{Int,1} = [c = (Int(c) + n) % 26 for c in encode(text)]\n",
+    "\n",
+    "    ## 復号: 平文[i] = (暗号文[i] + 26 - n) % 26\n",
+    "    ### アルファベットの列を循環させるために、文字符号をn文字左にずらしたあと 26 で割った余りを求める\n",
+    "    Dec(signs::Array{Int,1}, n::Int) = decode([c = Char((Int(c) + 26 - n) % 26) for c in signs])\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 7, 14, 14, 17, 25, 17, 20, 14, 6]\n",
+      "helloworld\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 動作確認\n",
+    "enc = Caesar.Enc(\"helloworld\", Caesar.KeyGen())\n",
+    "println(enc) # 暗号文\n",
+    "\n",
+    "dec = Caesar.Dec(enc, Caesar.KeyGen())\n",
+    "println(dec) # 平文"
    ]
   },
   {
