update: シーザー暗号: 現代暗号対応

--- a/01_古典暗号.ipynb
+++ b/01_古典暗号.ipynb
@@ -242,11 +242,11 @@
     "\n",
     "    ## 暗号化: 暗号文[i] = (平文[i] + n) % 26\n",
     "    ### アルファベットの列を循環させるために、文字符号をn文字右にずらしたあと 26 で割った余りを求める\n",
-    "    Enc(text::AbstractString, n::Int)::Array{Int,1} = [c = (Int(c) + n) % 26 for c in encode(text)]\n",
+    "    Enc(text::AbstractString, n::Int)::AbstractString = String(decode([c = Char((Int(c) + n) % 26) for c in encode(text)]))\n",
     "\n",
     "    ## 復号: 平文[i] = (暗号文[i] + 26 - n) % 26\n",
     "    ### アルファベットの列を循環させるために、文字符号をn文字左にずらしたあと 26 で割った余りを求める\n",
-    "    Dec(signs::Array{Int,1}, n::Int) = decode([c = Char((Int(c) + 26 - n) % 26) for c in signs])\n",
+    "    Dec(text::AbstractString, n::Int)::AbstractString = String(decode([c = Char((Int(c) + 26 - n) % 26) for c in encode(text)]))\n",
     "end"
    ]
   },
@@ -259,7 +259,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[10, 7, 14, 14, 17, 25, 17, 20, 14, 6]\n",
+      "khoorzruog\n",
       "helloworld\n"
      ]
     }
@@ -270,6 +270,88 @@
     "println(enc) # 暗号文\n",
     "\n",
     "dec = Caesar.Dec(enc, Caesar.KeyGen())\n",
+    "println(dec) # 平文"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### シーザー暗号の現代暗号対応\n",
+    "- 上記のプログラムを見てもわかるように、古典暗号をコンピュータ上で再現しようとすると無駄な処理が増える\n",
+    "- やはりコンピュータで計算させるのであれば、平文空間／暗号化文空間を符号の集合で表現するのが最も効率的\n",
+    "    - さらに言えば、記号類も符号化することにより、より自然な文章の平文を扱うこともできる\n",
+    "\n",
+    "#### シーザー暗号のコンピュータアルゴリズム\n",
+    "- 符号化: `f(平文::AbstractString) -> 平文空間::Array{Int,1}`\n",
+    "    - 符号の集合を整数の1次元配列で表現する\n",
+    "- 暗号化: `f(平文空間::Array{Int,1}) -> 暗号文空間::Array{Int,1}`\n",
+    "    - KeyGen: `f(起動) -> n = 3`\n",
+    "    - Enc: `f(平文空間::Array{Int,1}, n::Int) -> 元 += n`\n",
+    "    - Dec: `f(暗号文空間::Array{Int,1}, n::Int) -> 元 -= n`\n",
+    "- 文字列化: `f(平文空間::Array{Int,1}) -> 平文::AbstractString`\n",
+    "    - 符号の集合を文字列に戻す"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "decode (generic function with 2 methods)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# シーザー暗号（現代暗号最適化版）\n",
+    "module NewCaesar\n",
+    "    # 鍵生成: f() -> n = 3\n",
+    "    KeyGen()::Int = 3\n",
+    "    \n",
+    "    # 暗号化: f(平文空間, 鍵) -> 元 += 鍵\n",
+    "    ## Julia の `.` 演算子は、関数を配列の各要素に対して適用する\n",
+    "    Enc(signs::Array{Int,1}, n::Int)::Array{Int,1} = signs .+= n\n",
+    "\n",
+    "    # 復号: f(暗号文空間, 鍵) -> 元 -= 鍵\n",
+    "    Dec(signs::Array{Int,1}, n::Int)::Array{Int,1} = signs .-= n\n",
+    "end\n",
+    "\n",
+    "# 符号化: f(平文::AbstractString) -> 符号空間::Array{Int,1}\n",
+    "encode(text::AbstractString)::Array{Int,1} = [Int(c) for c in text]\n",
+    "\n",
+    "# 文字列化: f(符号空間::Array{Int,1}) -> 平文::AbstractString\n",
+    "decode(signs::Array{Int,1})::AbstractString = String([Char(c) for c in signs])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[75, 104, 111, 111, 114, 47, 35, 90, 114, 117, 111, 103, 36]\n",
+      "Hello, World!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 動作確認\n",
+    "enc = NewCaesar.Enc(encode(\"Hello, World!\"), NewCaesar.KeyGen())\n",
+    "println(enc) # 暗号文\n",
+    "\n",
+    "## |> パイプ演算子: 直前の式の結果を直後の関数の第1引数に渡す\n",
+    "### -> decode(NewCaesar.Dec(enc, NewCaesar.KeyGen()))\n",
+    "dec = NewCaesar.Dec(enc, NewCaesar.KeyGen()) |> decode\n",
     "println(dec) # 平文"
    ]
   },
