--- a/01_古典暗号.ipynb
+++ b/01_古典暗号.ipynb
@@ -356,6 +356,115 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## コード\n",
+    "\n",
+    "- 仲間内でしか通用しない合言葉を拡張したもの\n",
+    "    - 合言葉の対応表をコードブックと呼ぶ\n",
+    "- コードブックを作成するのに膨大な時間がかかる\n",
+    "- コードブックは丸暗記に向いていないため、配送・携帯・管理に問題が生じる\n",
+    "\n",
+    "### コードのアルゴリズム\n",
+    "- コードブックを参照し、特定のキーワードに一致した部分を合言葉に置換する\n",
+    "    - 鍵生成: `KeyGen() -> コードブック::Array{Tuple{String,String},1}`\n",
+    "        - コードブック: 2つの文字列（キーワード, 合言葉）のタプルを1次元配列で表現\n",
+    "    - 暗号化: `Enc(平文空間::String, コードブック) -> 暗号文空間::String`\n",
+    "        - 適用: `replace(平文空間::String, キーワード::String, 合言葉::String)`\n",
+    "    - 復号: `Dec(暗号文空間::String, コードブック) -> 平文空間::String`\n",
+    "        - 適用: `replace(暗号文空間::String, 合言葉::String, キーワード::String)`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Main.Code"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# コード\n",
+    "module Code\n",
+    "\n",
+    "## 鍵生成\n",
+    "KeyGen()::Array{Tuple{AbstractString,AbstractString},1} = [\n",
+    "    (\"apple\", \"バナナ\"), (\"Hello\", \"byebye\"), (\"world\", \"りんご\"),\n",
+    "    (\"バナナ\", \"milky\"), (\"I'm\", \"!?!?@^^;\"), (\", \", \"hogeほげ!\"),\n",
+    "    (\"1988\", \"_8891_@\"), (\"Boy\", \"ジュリア\"), (\"Girl\", \"womanma\"),\n",
+    "]\n",
+    "\n",
+    "## 暗号化\n",
+    "Enc(\n",
+    "    text::AbstractString,\n",
+    "    book::Array{Tuple{AbstractString,AbstractString},1}\n",
+    ")::AbstractString = begin\n",
+    "    for words in book\n",
+    "        text = replace(text, words[1] => words[2])\n",
+    "    end\n",
+    "    text\n",
+    "end\n",
+    "\n",
+    "## 復号\n",
+    "Dec(\n",
+    "    text::AbstractString,\n",
+    "    book::Array{Tuple{AbstractString,AbstractString},1}\n",
+    ")::AbstractString = begin\n",
+    "    for words in book\n",
+    "        text = replace(text, words[2] => words[1])\n",
+    "    end\n",
+    "    text\n",
+    "end\n",
+    "\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "byebyehogeほげ!りんご!\n",
+      "!?!?@^^; milkymilky at _8891_@.\n",
+      "ジュリアs and womanmas be ambisious!\n",
+      "\n",
+      "Hello, world!\n",
+      "I'm バナナバナナ at 1988.\n",
+      "Boys and Girls be ambisious!\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 動作確認\n",
+    "text = \"\"\"\n",
+    "Hello, world!\n",
+    "I'm appleバナナ at 1988.\n",
+    "Boys and Girls be ambisious!\n",
+    "\"\"\"\n",
+    "enc = Code.Enc(text, Code.KeyGen())\n",
+    "println(enc) # 暗号文\n",
+    "\n",
+    "dec = Code.Dec(enc, Code.KeyGen())\n",
+    "println(dec) # 平文"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
