add: スキュタレー暗号

--- a/01_古典暗号.ipynb
+++ b/01_古典暗号.ipynb
@@ -465,6 +465,109 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## スキュタレー暗号\n",
+    "\n",
+    "- 暗号文が帯状のものに記述されるため秘密通信と相性が良い\n",
+    "    - 例えば、ベルトにすることで隠して運搬することなどが可能\n",
+    "- スキュタレー暗号を一般化すると転置式暗号に拡張できる\n",
+    "- 仕組み:\n",
+    "    1. 帯状の羊皮紙を特定の太さの筒に斜めに巻きつける\n",
+    "    2. 筒に巻きつけた状態の帯に平文を書き込む\n",
+    "    3. 余白は無意味な文字で埋める\n",
+    "    4. 巻きつけた羊皮紙を解くと、無意味な文字列となっている\n",
+    "        - 要するに縦読みの応用\n",
+    "\n",
+    "### スキュタレー暗号のアルゴリズム\n",
+    "- 鍵生成: `KeyGen() -> 筒の直径::Int`\n",
+    "    - 筒の直径は秘密にしておかなければならない\n",
+    "- 暗号化: `Enc(平文::String, 筒の直径::Int) -> 暗号文::String`\n",
+    "    1. 平文を筒の直径に合わせて分割\n",
+    "        - `平文 / 筒の直径 -> Array{Array{Char,1},1}`\n",
+    "    2. 分割した文字列配列の最後の文字列が筒の直径の長さに足りていない場合は、ランダムな文字列で埋める\n",
+    "    3. 文字列配列の行列を転置する\n",
+    "    4. 再び1つの文字列につなげる\n",
+    "- 復号化: 暗号化の逆を行えば良い"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Array{Array{Any,1},1}:\n",
+       " ['雨', '降', 'っ', 'て']                  \n",
+       " ['地', '固', 'ま', 'る']                  \n",
+       " ['ぞ', '\\Uf5fa5', '\\U1a148', '\\U38c25']"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import Base: /\n",
+    "\n",
+    "# 標準関数 `/` に機能追加\n",
+    "## 文字列を数値分の長さごとに分割 -> Array{Array{Char,1},1}\n",
+    "/(str::AbstractString, n::Int) = begin\n",
+    "    result = [[]]\n",
+    "    cur = result[1]\n",
+    "    for c in str\n",
+    "        if length(cur) === n\n",
+    "            cur = []\n",
+    "            push!(result, cur)\n",
+    "        end\n",
+    "        push!(cur, c)\n",
+    "    end\n",
+    "    result\n",
+    "end\n",
+    "\n",
+    "# 動作確認\n",
+    "array = \"雨降って地固まるぞ\" / 4\n",
+    "\n",
+    "# 長さが足りない場合はランダムな文字で埋める\n",
+    "if length(array[end]) < 4\n",
+    "    array[end] = vcat(array[end], rand(Char, 4 - length(array[end])))\n",
+    "end\n",
+    "\n",
+    "array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"雨地ぞ降固\\Uf5fa5っま\\U1a148てる\\U38c25\""
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 縦読みで文字列を再構築\n",
+    "str = \"\"\n",
+    "for i = 1:4\n",
+    "    for row in array\n",
+    "        str *= string(row[i])\n",
+    "    end\n",
+    "end\n",
+    "str"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
