--- a/01_古典暗号.ipynb
+++ b/01_古典暗号.ipynb
@@ -494,19 +494,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "3-element Array{Array{Any,1},1}:\n",
-       " ['雨', '降', 'っ', 'て']                  \n",
-       " ['地', '固', 'ま', 'る']                  \n",
-       " ['ぞ', '\\Uf5fa5', '\\U1a148', '\\U38c25']"
+       " ['雨', '降', 'っ', 'て']           \n",
+       " ['地', '固', 'ま', 'る']           \n",
+       " ['ぞ', '\\uefc0', '\\U4fd9c', '𧎚']"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,16 +542,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"雨地ぞ降固\\Uf5fa5っま\\U1a148てる\\U38c25\""
+       "\"雨地ぞ降固\\uefc0っま\\U4fd9cてる𧎚\""
       ]
      },
-     "execution_count": 80,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,6 +565,226 @@
     "    end\n",
     "end\n",
     "str"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### スキュタレー暗号の効率化\n",
+    "- 平文を文字列のまま扱うとUTF-8文字などの関係で「何文字目の文字を取り出す」という操作が難しい\n",
+    "- 結果、いちいち行列に変換する手間がかかり効率が悪い\n",
+    "- 符号空間に変換してから、スキュタレー暗号化することで効率的な処理が可能\n",
+    "\n",
+    "#### 符号化スキュタレー暗号のアルゴリズム\n",
+    "- 暗号化: `Enc(平文空間::Array{Int,1}, 筒の直径::Int) -> 暗号文空間::Array{Int,1}`\n",
+    "     1. 符号配列の長さが筒の直径で割り切れない場合は、足りない分をランダムなChar型整数で埋める\n",
+    "     2. 符号配列を筒の直径に合わせて分割\n",
+    "         - `平文 / 筒の直径 -> Array{Array{Int,1},1}`\n",
+    "     3. 行列を転置する\n",
+    "     4. 1次元配列にreshape\n",
+    "- 復号: 暗号化の逆の手順で行う"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2×5 Array{Int64,2}:\n",
+       " 1  3  5  7   9\n",
+       " 2  4  6  8  10"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# テスト\n",
+    "r = reshape([1,2,3,4,5,6,7,8,9,10], (2,:))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5×2 Array{Int64,2}:\n",
+       " 1   2\n",
+       " 3   4\n",
+       " 5   6\n",
+       " 7   8\n",
+       " 9  10"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t = permutedims(r, (2, 1)) # 行,列 -> 列,行 に転置"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10-element Array{Int64,1}:\n",
+       "  1\n",
+       "  3\n",
+       "  5\n",
+       "  7\n",
+       "  9\n",
+       "  2\n",
+       "  4\n",
+       "  6\n",
+       "  8\n",
+       " 10"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "e = reshape(t, length(t))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10-element Array{Int64,1}:\n",
+       "  1\n",
+       "  2\n",
+       "  3\n",
+       "  4\n",
+       "  5\n",
+       "  6\n",
+       "  7\n",
+       "  8\n",
+       "  9\n",
+       " 10"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 元に戻す\n",
+    "reshape(e, (:,2)) |> # 5x2行列に変換\n",
+    "    (x) -> permutedims(x, (2, 1)) |> # 転置行列 2x5\n",
+    "        (x) -> reshape(x, :) # 1次元配列に戻す"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Main.Scutalay"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# スキュタレー暗号\n",
+    "module Scutalay\n",
+    "\n",
+    "## 鍵生成: 2〜10の乱数\n",
+    "KeyGen()::Int = rand(2:10)\n",
+    "\n",
+    "## 暗号化\n",
+    "Enc(signs::Array{Int,1}, r::Int)::Array{Int,1} = (\n",
+    "        length(signs) % r > 0 ?\n",
+    "        # 長さが足りない分を乱数で埋める\n",
+    "        signs = vcat(signs, rand(Int, r - length(signs) % r)) : signs\n",
+    "    ) |>\n",
+    "    # r x ? 行列に変換\n",
+    "    (x) -> reshape(x, (r, :)) |>\n",
+    "    # ? x r 転置行列\n",
+    "    (x) -> permutedims(x, (2, 1)) |>\n",
+    "    # Array{Int,1}配列に戻す\n",
+    "    (x) -> reshape(x, :)\n",
+    "\n",
+    "## 復号 -> 平文にして返す\n",
+    "Dec(signs::Array{Int,1}, r::Int)::AbstractString = String(\n",
+    "        Array{Char,1}([\n",
+    "            isvalid(Char, c) && Char(c) for c in (\n",
+    "                reshape(signs, (:, r)) |>\n",
+    "                    (x) -> permutedims(x, (2, 1)) |>\n",
+    "                    (x) -> reshape(x, :)\n",
+    "            )\n",
+    "        ])\n",
+    "    )\n",
+    "\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[72, 101, 108, 108, 111, 44, 32, 119, 111, 114, 108, 100, 33, 10, 73, 39, 109, 32, 97, 112, 112, 108, 101, 12496, 12490, 12490, 32, 97, 116, 32, 49, 57, 56, 56, 46, 10, 66, 111, 121, 115, 32, 97, 110, 100, 32, 71, 105, 114, 108, 115, 32, 98, 101, 32, 97, 109, 98, 105, 115, 105, 111, 117, 115, 33, 10]\n",
+      "[72, 32, 33, 97, 12490, 49, 66, 110, 108, 97, 111, 101, 119, 10, 112, 12490, 57, 111, 100, 115, 109, 117, 108, 111, 73, 112, 32, 56, 121, 32, 32, 98, 115, 108, 114, 39, 108, 97, 56, 115, 71, 98, 105, 33, 111, 108, 109, 101, 116, 46, 32, 105, 101, 115, 10, 44, 100, 32, 12496, 32, 10, 97, 114, 32, 105, 4473755091814776661]\n",
+      "Hello, world!\n",
+      "I'm appleバナナ at 1988.\n",
+      "Boys and Girls be ambisious!\n",
+      "\u0000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 動作確認\n",
+    "\n",
+    "r = Scutalay.KeyGen() # 秘密にしなければならない筒の直径\n",
+    "\n",
+    "# 平文\n",
+    "text = \"\"\"\n",
+    "Hello, world!\n",
+    "I'm appleバナナ at 1988.\n",
+    "Boys and Girls be ambisious!\n",
+    "\"\"\"\n",
+    "\n",
+    "signs = encode(text)\n",
+    "println(signs) # 符号\n",
+    "\n",
+    "enc = Scutalay.Enc(encode(text), r)\n",
+    "println(enc) # 暗号文\n",
+    "\n",
+    "dec = Scutalay.Dec(enc, r)\n",
+    "println(dec) # 平文"
    ]
   },
   {
