fix: スキュタレー暗号: 符号化

--- a/01_古典暗号.ipynb
+++ b/01_古典暗号.ipynb
@@ -572,8 +572,8 @@
    "metadata": {},
    "source": [
     "### スキュタレー暗号の効率化\n",
-    "- 平文を文字列のまま扱うとUTF-8文字などの関係で「何文字目の文字を取り出す」という操作が難しい\n",
-    "- 結果、いちいち行列に変換する手間がかかり効率が悪い\n",
+    "- 平文を文字列のまま扱うとUTF-8文字などの関係で行列への変換コストがかかる\n",
+    "- また、permutedimsなどの行列操作関数を使うこともできず、非効率的\n",
     "- 符号空間に変換してから、スキュタレー暗号化することで効率的な処理が可能\n",
     "\n",
     "#### 符号化スキュタレー暗号のアルゴリズム\n",
