add: 転置式暗号

--- a/01_古典暗号.ipynb
+++ b/01_古典暗号.ipynb
@@ -788,6 +788,58 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 転置式暗号\n",
+    "\n",
+    "- アナグラムの応用的な暗号化方式\n",
+    "- 従来の暗号の鍵は数十通りだったが、転置式暗号の鍵は数百通りになる\n",
+    "- 現代暗号でも利用されている\n",
+    "- 仕組み:\n",
+    "    - 基本的には、スキュタレー暗号の「行列転置」部分を「特定のルールに従って転置する」という方式に一般化したもの\n",
+    "        1. 平文を適当な数で分割する\n",
+    "        2. 分割した文字列の行列に対して転置関数（文字入れ替えのルール）を適用する\n",
+    "        3. 分割した文字列を結合して暗号文とする\n",
+    "\n",
+    "### 転置式暗号のアルゴリズム\n",
+    "スキュタレー暗号同様、符号の集合を平文空間として扱ったほうが効率が良いため、符号化してアルゴリズムを適用する\n",
+    "\n",
+    "1. 鍵生成:\n",
+    "    - `KeyGen() -> n = 分割文字数::Int, τ = 置換規則::Function`\n",
+    "    - 置換規則: `τ(Array{Int,2}) -> Array{Int,2}`\n",
+    "        - 平文空間が分割された2次元配列（行列）を転置する関数\n",
+    "2. 暗号化:\n",
+    "    - `Enc(平文空間::Array{Int,1}, n::Int, τ::Function) -> 暗号文空間::Array{Int,1}`\n",
+    "        1. 平文空間分割: `平文空間 / n -> 平文行列::Array{Int,2}`\n",
+    "        2. 置換規則適用: `τ(平文行列) -> 暗号文行列::Array{Int,2}`\n",
+    "        3. 暗号文空間化: `reshape(暗号文行列, :) -> 暗号文空間::Array{Int,2}`\n",
+    "3. 復号:\n",
+    "    - `Dec(暗号文空間::Array{Int,1}, n::Int, τ^-1::Function) -> 平文空間::Array{Int,1}`\n",
+    "        - τ^-1: 置換規則の逆操作\n",
+    "\n",
+    "#### 鍵の決め方\n",
+    "- 暗号の仕様を決定する段階では平文の長さはわからない\n",
+    "    - -> 平分の長さに応じて暗号の仕様を決定するのは不可能\n",
+    "- 仕様決定の際には、分割文字数と平分の文字数の関係によって、以下のような結果に成ることを考慮する必要がある\n",
+    "    1. 「分割文字数 = 平文文字数」の場合\n",
+    "        - 平文をシャッフルした状況と同等\n",
+    "    2. 「分割文字数 > 平文文字数」の場合\n",
+    "        - 平文にパディングして文字数を分割文字数と一致させるなどの工夫が必要になる\n",
+    "        - ただし、パディングに使用した文字が自明であると置換規則解読のヒントになってしまう\n",
+    "    3. 「分割文字数 < 平文文字数」の場合\n",
+    "        - 分割文字数が平文より極端に小さいと暗号化強度が脆弱になる\n",
+    "        - 極端な話、分割文字数が1だと暗号化は行われない\n",
+    "\n",
+    "### 転置式暗号の鍵数\n",
+    "- 分割文字数を4とした場合、置換規則の総数は次のように計算できる\n",
+    "    - `置換規則の総数 = 4! = 4 * 3 * 2 * 1 = 24`\n",
+    "- 解読者が分割文字数を6以下であると推測した場合、n = 2, 3, ..., 6 を総当りで計算することになるため、探索する置換規則の候補数は次のようになる\n",
+    "    - `置換規則の総数 = 2! + 3! + 4! + 5! + 6! = 872`\n",
+    "- このように、転置式暗号の鍵の候補は、これまでの古典暗号に比べて格段に多く、総当り解読に対して高い強度を持っている"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
