add: シフト暗号

--- a/01_古典暗号.ipynb
+++ b/01_古典暗号.ipynb
@@ -359,6 +359,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## シフト暗号\n",
+    "\n",
+    "- シーザー暗号は文字をずらす値を3に固定していたが、ずらす値を任意とする方法をシフト暗号と呼ぶ\n",
+    "- ずらす値は鍵に相当するため、送受信者以外には秘密にする必要がある"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[82, 111, 118, 118, 121, 54, 42, 97, 121, 124, 118, 110, 43]\n",
+      "Hello, World!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# シフト暗号\n",
+    "module Shift\n",
+    "    # 鍵生成: f() -> n = 1〜10の乱数\n",
+    "    KeyGen()::Int = rand(1:10)\n",
+    "    \n",
+    "    # 暗号化: f(平文空間::Array{Int,1}, 鍵::Int) -> 暗号文空間[i] = 平文空間[i] + 鍵\n",
+    "    Enc(signs::Array{Int,1}, n::Int)::Array{Int,1} = signs .+= n\n",
+    "\n",
+    "    # 復号: f(平文空間::Array{Int,1}, 鍵::Int) -> 暗号文空間[i] = 平文空間[i] - 鍵\n",
+    "    Dec(signs::Array{Int,1}, n::Int)::Array{Int,1} = signs .-= n\n",
+    "end\n",
+    "\n",
+    "# 動作確認\n",
+    "key = Shift.KeyGen() # 鍵 = ずらす値\n",
+    "\n",
+    "enc = Shift.Enc(encode(\"Hello, World!\"), key)\n",
+    "println(enc) # 暗号文\n",
+    "\n",
+    "dec = Shift.Dec(enc, key) |> decode\n",
+    "println(dec) # 平文"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## コード\n",
     "\n",
     "- 仲間内でしか通用しない合言葉を拡張したもの\n",
@@ -378,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +434,7 @@
        "Main.Code"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -494,19 +541,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "3-element Array{Array{Any,1},1}:\n",
-       " ['雨', '降', 'っ', 'て']           \n",
-       " ['地', '固', 'ま', 'る']           \n",
-       " ['ぞ', '\\uefc0', '\\U4fd9c', '𧎚']"
+       " ['雨', '降', 'っ', 'て']            \n",
+       " ['地', '固', 'ま', 'る']            \n",
+       " ['ぞ', '𐅊', '\\Ucaab2', '\\U740ef']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,16 +589,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"雨地ぞ降固\\uefc0っま\\U4fd9cてる𧎚\""
+       "\"雨地ぞ降固𐅊っま\\Ucaab2てる\\U740ef\""
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +646,7 @@
        " 2  4  6  8  10"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -625,43 +672,13 @@
        " 9  10"
       ]
      },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "t = permutedims(r, (2, 1)) # 行,列 -> 列,行 に転置"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10-element Array{Int64,1}:\n",
-       "  1\n",
-       "  3\n",
-       "  5\n",
-       "  7\n",
-       "  9\n",
-       "  2\n",
-       "  4\n",
-       "  6\n",
-       "  8\n",
-       " 10"
-      ]
-     },
      "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "e = reshape(t, length(t))"
+    "t = permutedims(r, (2, 1)) # 行,列 -> 列,行 に転置"
    ]
   },
   {
@@ -674,6 +691,36 @@
       "text/plain": [
        "10-element Array{Int64,1}:\n",
        "  1\n",
+       "  3\n",
+       "  5\n",
+       "  7\n",
+       "  9\n",
+       "  2\n",
+       "  4\n",
+       "  6\n",
+       "  8\n",
+       " 10"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "e = reshape(t, length(t))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10-element Array{Int64,1}:\n",
+       "  1\n",
        "  2\n",
        "  3\n",
        "  4\n",
@@ -685,7 +732,7 @@
        " 10"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -699,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -708,7 +755,7 @@
        "Main.Scutalay"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -749,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -757,11 +804,30 @@
      "output_type": "stream",
      "text": [
       "[72, 101, 108, 108, 111, 44, 32, 119, 111, 114, 108, 100, 33, 10, 73, 39, 109, 32, 97, 112, 112, 108, 101, 12496, 12490, 12490, 32, 97, 116, 32, 49, 57, 56, 56, 46, 10, 66, 111, 121, 115, 32, 97, 110, 100, 32, 71, 105, 114, 108, 115, 32, 98, 101, 32, 97, 109, 98, 105, 115, 105, 111, 117, 115, 33, 10]\n",
-      "[72, 32, 33, 97, 12490, 49, 66, 110, 108, 97, 111, 101, 119, 10, 112, 12490, 57, 111, 100, 115, 109, 117, 108, 111, 73, 112, 32, 56, 121, 32, 32, 98, 115, 108, 114, 39, 108, 97, 56, 115, 71, 98, 105, 33, 111, 108, 109, 101, 116, 46, 32, 105, 101, 115, 10, 44, 100, 32, 12496, 32, 10, 97, 114, 32, 105, 4473755091814776661]\n",
-      "Hello, world!\n",
-      "I'm appleバナナ at 1988.\n",
-      "Boys and Girls be ambisious!\n",
-      "\u0000\n"
+      "[72, 108, 32, 114, 33, 39, 97, 108, 12490, 97, 49, 56, 66, 115, 110, 71, 108, 98, 97, 105, 111, 33, 101, 111, 119, 108, 10, 109, 112, 101, 12490, 116, 57, 46, 111, 32, 100, 105, 115, 101, 109, 115, 117, 10, 108, 44, 111, 100, 73, 32, 112, 12496, 32, 32, 56, 10, 121, 97, 32, 114, 32, 32, 98, 105, 115, -1177193561662055257]\n"
+     ]
+    },
+    {
+     "ename": "InexactError",
+     "evalue": "InexactError: check_top_bit(Int64, -1177193561662055257)",
+     "output_type": "error",
+     "traceback": [
+      "InexactError: check_top_bit(Int64, -1177193561662055257)",
+      "",
+      "Stacktrace:",
+      " [1] throw_inexacterror(::Symbol, ::Any, ::Int64) at ./boot.jl:583",
+      " [2] check_top_bit at ./boot.jl:597 [inlined]",
+      " [3] toUInt64 at ./boot.jl:708 [inlined]",
+      " [4] Type at ./boot.jl:738 [inlined]",
+      " [5] Type at ./boot.jl:758 [inlined]",
+      " [6] isvalid at ./strings/unicode.jl:48 [inlined]",
+      " [7] #7 at ./none:0 [inlined]",
+      " [8] iterate at ./generator.jl:47 [inlined]",
+      " [9] collect_to!(::Array{Char,1}, ::Base.Generator{Array{Int64,1},getfield(Main.Scutalay, Symbol(\"##7#10\"))}, ::Int64, ::Int64) at ./array.jl:651",
+      " [10] collect_to_with_first! at ./array.jl:630 [inlined]",
+      " [11] collect(::Base.Generator{Array{Int64,1},getfield(Main.Scutalay, Symbol(\"##7#10\"))}) at ./array.jl:611",
+      " [12] Dec(::Array{Int64,1}, ::Int64) at ./In[19]:21",
+      " [13] top-level scope at In[20]:17"
      ]
     }
    ],
@@ -840,10 +906,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
