add: 単一換字式暗号

--- a/01_古典暗号.ipynb
+++ b/01_古典暗号.ipynb
@@ -374,7 +374,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[82, 111, 118, 118, 121, 54, 42, 97, 121, 124, 118, 110, 43]\n",
+      "[73, 102, 109, 109, 112, 45, 33, 88, 112, 115, 109, 101, 34]\n",
       "Hello, World!\n"
      ]
     }
@@ -548,9 +548,9 @@
      "data": {
       "text/plain": [
        "3-element Array{Array{Any,1},1}:\n",
-       " ['雨', '降', 'っ', 'て']            \n",
-       " ['地', '固', 'ま', 'る']            \n",
-       " ['ぞ', '𐅊', '\\Ucaab2', '\\U740ef']"
+       " ['雨', '降', 'っ', 'て']                  \n",
+       " ['地', '固', 'ま', 'る']                  \n",
+       " ['ぞ', '\\Ua1e62', '\\U9340e', '\\U89450']"
       ]
      },
      "execution_count": 13,
@@ -595,7 +595,7 @@
     {
      "data": {
       "text/plain": [
-       "\"雨地ぞ降固𐅊っま\\Ucaab2てる\\U740ef\""
+       "\"雨地ぞ降固\\Ua1e62っま\\U9340eてる\\U89450\""
       ]
      },
      "execution_count": 14,
@@ -771,7 +771,7 @@
     "Enc(signs::Array{Int,1}, r::Int)::Array{Int,1} = (\n",
     "        length(signs) % r > 0 ?\n",
     "        # 長さが足りない分を乱数で埋める\n",
-    "        signs = vcat(signs, rand(Int, r - length(signs) % r)) : signs\n",
+    "        signs = vcat(signs, rand(Char, r - length(signs) % r)) : signs\n",
     "    ) |>\n",
     "    # r x ? 行列に変換\n",
     "    (x) -> reshape(x, (r, :)) |>\n",
@@ -781,15 +781,13 @@
     "    (x) -> reshape(x, :)\n",
     "\n",
     "## 復号 -> 平文にして返す\n",
-    "Dec(signs::Array{Int,1}, r::Int)::AbstractString = String(\n",
-    "        Array{Char,1}([\n",
-    "            isvalid(Char, c) && Char(c) for c in (\n",
-    "                reshape(signs, (:, r)) |>\n",
-    "                    (x) -> permutedims(x, (2, 1)) |>\n",
-    "                    (x) -> reshape(x, :)\n",
-    "            )\n",
-    "        ])\n",
-    "    )\n",
+    "Dec(signs::Array{Int,1}, r::Int)::AbstractString = String([\n",
+    "        Char(c) for c in (\n",
+    "            reshape(signs, (:, r)) |>\n",
+    "                (x) -> permutedims(x, (2, 1)) |>\n",
+    "                (x) -> reshape(x, :)\n",
+    "        )\n",
+    "    ])\n",
     "\n",
     "end"
    ]
@@ -804,30 +802,11 @@
      "output_type": "stream",
      "text": [
       "[72, 101, 108, 108, 111, 44, 32, 119, 111, 114, 108, 100, 33, 10, 73, 39, 109, 32, 97, 112, 112, 108, 101, 12496, 12490, 12490, 32, 97, 116, 32, 49, 57, 56, 56, 46, 10, 66, 111, 121, 115, 32, 97, 110, 100, 32, 71, 105, 114, 108, 115, 32, 98, 101, 32, 97, 109, 98, 105, 115, 105, 111, 117, 115, 33, 10]\n",
-      "[72, 108, 32, 114, 33, 39, 97, 108, 12490, 97, 49, 56, 66, 115, 110, 71, 108, 98, 97, 105, 111, 33, 101, 111, 119, 108, 10, 109, 112, 101, 12490, 116, 57, 46, 111, 32, 100, 105, 115, 101, 109, 115, 117, 10, 108, 44, 111, 100, 73, 32, 112, 12496, 32, 32, 56, 10, 121, 97, 32, 114, 32, 32, 98, 105, 115, -1177193561662055257]\n"
-     ]
-    },
-    {
-     "ename": "InexactError",
-     "evalue": "InexactError: check_top_bit(Int64, -1177193561662055257)",
-     "output_type": "error",
-     "traceback": [
-      "InexactError: check_top_bit(Int64, -1177193561662055257)",
-      "",
-      "Stacktrace:",
-      " [1] throw_inexacterror(::Symbol, ::Any, ::Int64) at ./boot.jl:583",
-      " [2] check_top_bit at ./boot.jl:597 [inlined]",
-      " [3] toUInt64 at ./boot.jl:708 [inlined]",
-      " [4] Type at ./boot.jl:738 [inlined]",
-      " [5] Type at ./boot.jl:758 [inlined]",
-      " [6] isvalid at ./strings/unicode.jl:48 [inlined]",
-      " [7] #7 at ./none:0 [inlined]",
-      " [8] iterate at ./generator.jl:47 [inlined]",
-      " [9] collect_to!(::Array{Char,1}, ::Base.Generator{Array{Int64,1},getfield(Main.Scutalay, Symbol(\"##7#10\"))}, ::Int64, ::Int64) at ./array.jl:651",
-      " [10] collect_to_with_first! at ./array.jl:630 [inlined]",
-      " [11] collect(::Base.Generator{Array{Int64,1},getfield(Main.Scutalay, Symbol(\"##7#10\"))}) at ./array.jl:611",
-      " [12] Dec(::Array{Int64,1}, ::Int64) at ./In[19]:21",
-      " [13] top-level scope at In[20]:17"
+      "[72, 108, 32, 114, 33, 39, 97, 108, 12490, 97, 49, 56, 66, 115, 110, 71, 108, 98, 97, 105, 111, 33, 101, 111, 119, 108, 10, 109, 112, 101, 12490, 116, 57, 46, 111, 32, 100, 105, 115, 101, 109, 115, 117, 10, 108, 44, 111, 100, 73, 32, 112, 12496, 32, 32, 56, 10, 121, 97, 32, 114, 32, 32, 98, 105, 115, 434336]\n",
+      "Hello, world!\n",
+      "I'm appleバナナ at 1988.\n",
+      "Boys and Girls be ambisious!\n",
+      "񪂠\n"
      ]
     }
    ],
@@ -908,6 +887,104 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## 単一換字式暗号\n",
+    "\n",
+    "- 単一換字式暗号の鍵の総数は膨大であるため、単純な総当り攻撃に対しては高い暗号強度を持つ\n",
+    "- 単一換字式暗号を解読する場合は、頻度分析という解読手法が使われる\n",
+    "- 文字の換字（置き換え）という考え方は、現代暗号でも利用される\n",
+    "\n",
+    "### 換字式暗号の仕組み\n",
+    "- 平文の文字を別の文字や記号に対応させる暗号のことを換字式暗号と呼ぶ\n",
+    "- 特に平文と暗号文の1文字が1対1で対応しているものを単一換字式暗号と呼ぶ\n",
+    "    - シーザー暗号やシフト暗号も単一換字式暗号の一種\n",
+    "- ある文字を別の文字に変換するルールを変換規則σで表す\n",
+    "    - `σ(平文文字::Char) -> 暗号文文字::Char`\n",
+    "\n",
+    "### 単一換字式暗号のアルゴリズム\n",
+    "- 鍵生成: `KeyGen() -> σ::Function`\n",
+    "    - 変換規則: `σ(平文文字::Char) -> 暗号文文字::Char`\n",
+    "- 暗号化: `Enc(平文空間::String, σ::Function) -> 暗号文空間::String`\n",
+    "    - 平文空間の各文字（元）に対して変換規則σを適用\n",
+    "- 復号: `Dec(暗号文空間::String, σ^-1::Function) -> 平文空間::String`\n",
+    "    - σ^-1: 変換規則の逆操作\n",
+    "\n",
+    "### 単一換字式暗号の鍵数\n",
+    "- アルファベット26文字の変換規則パターン（鍵）の総数は以下の通り\n",
+    "    - `変換規則の総数 = 26! ≒ 4.0×10^26`\n",
+    "- これは極めて巨大な数であり、総当たりによる鍵の探索はほぼ不可能である"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Main.CharReplacer"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 単一換字式暗号\n",
+    "module CharReplacer\n",
+    "\n",
+    "## 鍵生成: 変換規則 σ(Char)->Char を生成\n",
+    "### 変換規則:\n",
+    "### - 文字コードが偶数 => 右に9ずらす\n",
+    "### - 文字コードが奇数 => 左に9ずらす\n",
+    "KeyGen() = (c::Char) -> begin\n",
+    "    c = Int(c)\n",
+    "    c % 2 == 0 && return Char(c + 9)\n",
+    "    return Char(c - 9)\n",
+    "end\n",
+    "\n",
+    "## 暗号化: 平文空間に鍵（変換規則）を適用\n",
+    "Enc(text::AbstractString, σ)::AbstractString = String([σ(c) for c in text])\n",
+    "\n",
+    "## 復号: 平文空間に鍵（変換規則の逆操作）を適用\n",
+    "### 今回の場合、変換規則の逆操作 = 変換規則\n",
+    "Dec(text::AbstractString, σ)::AbstractString = String([σ(c) for c in text])\n",
+    "\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q\\uuf5)Nf{um\u0018\n",
+      "Hello, World!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 動作確認\n",
+    "key = CharReplacer.KeyGen() # 鍵 = 変換関数\n",
+    "\n",
+    "enc = CharReplacer.Enc(\"Hello, World!\", key)\n",
+    "println(enc) # 暗号文\n",
+    "\n",
+    "dec = CharReplacer.Dec(enc, key)\n",
+    "println(dec) # 平文"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
